--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,7 @@
     --dark-color: #242333;
     --darker-color: #15141f;
     --light-color: #ffffff;
+    --grey-color: #eeeeee;
     --accent-color: #01b0d3;
     --bright-accent-color: #3adeff;
 }
@@ -10,8 +11,41 @@
     font-family: 'Mukta', sans-serif;
 }
 body {
-
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+}
+
+.brightButton {
+    font-size: 100%;
+    font-weight: bolder;
+    margin: 10px;
+    width: 200px;
+    height: 40px;
+    background-color: var(--accent-color);
+    color: var(--dark-color);
+    border: none;
+    border-radius: 2px;
+}
+
+.brightButton:hover {
+    color: var(--darker-color);
+    background-color: var(--bright-accent-color);
+}
+
+.darkButton {
+    font-size: 100%;
+    font-weight: bolder;
+    margin: 10px;
+    width: 200px;
+    height: 40px;
+    background-color: var(--dark-color);
+    color: var(--accent-color);
+    border: none;
+    border-radius: 2px;
+}
+
+.darkButton:hover {
+    background-color: var(--darker-color);
+    color: var(--bright-accent-color);
 }
