--- a/client/src/components/BooksPage/BooksPage.css
+++ b/client/src/components/BooksPage/BooksPage.css
@@ -9,8 +9,8 @@
 }
 
 #searchInput {
-    width: 30vw;
-    min-width: 200px;
+    width: 25vw;
+    min-width: 150px;
     height: 30px;
     font-size: 100%;
 }
@@ -18,4 +18,12 @@
 #searchButton {
     height: 35px;
     width: 100px;
+}
+
+#filterType {
+    margin: 10px;
+    height: 35px;
+    width: 80px;
+    text-align: center;
+    font-size: 100%;
 }
