Add detailed view for books

--- a/client/src/components/Book/BriefBook.css
+++ b/client/src/components/Book/BriefBook.css
@@ -5,3 +5,12 @@
 .bookTableButton {
     width: 70px;
 }
+
+.bookIsbn a {
+    text-decoration: none;
+    color: black;
+}
+
+.bookIsbn a:hover {
+    color: var(--accent-color);
+}
